fix spacing

--- a/assets/scss/pages/_store-locator.scss
+++ b/assets/scss/pages/_store-locator.scss
@@ -237,10 +237,6 @@
             label {
                 min-width: 65px;
             }
-
-            select {
-
-            }
         }
     }
 }
